--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,17 +16,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryStore"
         tools:targetApi="31">
-
         <activity
-            android:name=".RegistrationActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".activities.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.GroceryStore.NoActionBar" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.RegistrationActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activities.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GroceryStore.NoActionBar">
