--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:theme="@style/Theme.GroceryStore.NoActionBar" />
         <activity
             android:name=".activities.RegistrationActivity"
-            android:exported="true"></activity>
+            android:exported="true"/>
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false" />
