--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:theme="@style/Theme.GroceryStore"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ViewAllActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.GroceryStore.NoActionBar" />
         <activity
             android:name=".activities.RegistrationActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false" />
