--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.GroceryStore"
         tools:targetApi="31">
         <activity
+            android:name=".activities.PlacedOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.NavCategoryActivity"
             android:exported="false" />
         <activity
